--- a/alap.html
+++ b/alap.html
@@ -10,11 +10,10 @@
 <body>
     <h1>Gecse Gergő</h1>
 
-    <div>
         <table>
             <thead>
                 <tr>
-                    <th id="rolam" colspan="2"><button onclick="window.location.href='rolam.html';">Rólam</th>
+                    <th id="rolam" colspan="2" onclick="window.location.href='rolam.html';">Rólam</th>
                 </tr>
                 <tr>
                     <th>Otthonom</th>
@@ -25,6 +24,5 @@
 
             </tbody>
         </table>
-    </div>
 </body>
 </html>
