--- a/alap.html
+++ b/alap.html
@@ -10,19 +10,32 @@
 <body>
     <h1>Gecse Gergő</h1>
 
+    <img src="kep.jpg" alt="kep" width="25%">
+
+    <br>
+
+    <div>
+
+    </div>
+    <br>
+
         <table>
             <thead>
                 <tr>
-                    <th id="rolam" colspan="2" onclick="window.location.href='rolam.html';">Rólam</th>
-                </tr>
-                <tr>
-                    <th>Otthonom</th>
-                    <th>Hobbik</th>
+                    <th class="gomb" colspan="2" onclick="window.location.href='rolam.html';">Rólam</th>
                 </tr>
             </thead>
             <tbody>
-
+                <tr>
+                    <td class="gomb" onclick="window.location.href='otthonom.html';">Otthonom</td>
+                    <td class="gomb" onclick="window.location.href='Hobbik.html';">Hobbik</td>
+                </tr>
             </tbody>
         </table>
+
+        <div></div>
+        <p>
+            forrás:én
+        </p>
 </body>
 </html>
