--- a/otthonom.html
+++ b/otthonom.html
@@ -12,6 +12,42 @@
 <body>
     <img src="arrow.png" alt="vissza" id="vissza" onclick="window.location.href='alap.html';">
 
+    <div>
+    <h1>Szolnok-Szandaszőlős</h1>
+    <br>
+    <p>Szandaszőlős egy Szolnokhoz csatolt falu.</p>
+    </div>
+    <br>
+
+    <img class="kep" src="szanda.png" alt="Szandaszőlős a térképen">
     
+    <div>
+        <h2>
+            Szandaszőlősi Általános Iskola
+        </h2>
+
+        <br>
+
+        <p>
+            Ide jártam általánosban. Ez Szandaszőlős egyetlen iskolája.
+        </p>
+    </div>
+
+    <br>
+
+    <div>
+        <h2>
+            Érdekességek
+        </h2>
+
+        <p>Szandaszőlős a gyakori tüzifa lopáson kívül nagyon semmivel nem büszkélkethet.
+
+
+        </p>
+    </div>
+
+    <br>
+
+    <img class="kep" src="kerdojel.jfif" alt="semmi">
 </body>
 </html>
