--- a/rolam.html
+++ b/rolam.html
@@ -10,6 +10,40 @@
 <body>
     <img src="arrow.png" alt="vissza" id="vissza" onclick="window.location.href='alap.html';">
 
-    
+    <div>
+        <h1>
+            Rólam
+        </h1>
+
+        <p>
+            Személyiségem finoman szólva is elhanyagolható, tehát nincs.
+        </p>
+        <p>
+            Agresszívan kerülök minden olyan dolgot, amiben/amihez emberekhez kéne szólnom.
+        </p>
+    </div>
+
+    <br>
+
+    <img id="antiszoc" src="antiszoc.png" alt="Éppen introvertált vagyok">
+
+    <br>
+
+    <div>
+        <h2>
+            Erősségeim
+        </h2>
+
+        <p>
+            <ul>
+                <li>képes vagyok pár másodperc alatt megölni egy beszélgetést</li>
+                <li>Nagyon jól tudok még olyan emberek közt is szorongni, akiket évek óta ismerek</li>
+                <li>Addig nem fejezek be semmit, amíg nem leszek vele teljesen megelégedve</li>
+                <li>200 kg lábtolón azt hiszem már egy elég nagy szám</li>
+
+                
+            </ul>
+        </p>
+    </div>
 </body>
 </html>
