--- a/rolam.html
+++ b/rolam.html
@@ -25,7 +25,7 @@
 
     <br>
 
-    <img id="antiszoc" src="antiszoc.png" alt="Éppen introvertált vagyok">
+    <img id="kep" src="antiszoc.png" alt="Éppen introvertált vagyok">
 
     <br>
 
@@ -40,10 +40,9 @@
                 <li>Nagyon jól tudok még olyan emberek közt is szorongni, akiket évek óta ismerek</li>
                 <li>Addig nem fejezek be semmit, amíg nem leszek vele teljesen megelégedve</li>
                 <li>200 kg lábtolón azt hiszem már egy elég nagy szám</li>
-
-                
             </ul>
         </p>
     </div>
+    <img id="kep" src="gym.jpeg" alt="gym">
 </body>
 </html>
