--- a/hobbik.html
+++ b/hobbik.html
@@ -11,5 +11,32 @@
 </head>
 <body>
     <img src="arrow.png" alt="vissza" id="vissza" onclick="window.location.href='alap.html';">
+
+    <div>
+        <h1>
+            Hobbik
+        </h1>
+        <p>
+            Mivel a szociális életem a nullához közelít, ezért elég sok dologgal foglalkozok szabadidőmben.
+        </p>
+    </div>
+
+    <br>
+
+    <div>
+        <ol>
+            <li>
+                <h2>Animálás</h2> 
+                <p>Nagyon fiatalon kezdtem el tanulni, viszont ez nem nagyon látszik meg egy munkámon sem.</p>
+                <img src="animalas.png" alt="animálás" class="kep">
+
+            </li>
+            <li>
+                <h2>3D modellezés</h2>
+                <img src="model.png" alt="3D modell" class="kep">
+            </li>
+
+        </ol>
+    </div>
 </body>
 </html>
