--- a/alap.html
+++ b/alap.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Gecse Gergő</h1>
 
-    <img src="kep.jpg" alt="kep" width="25%">
+    <img src="kep.jpg" alt="kep" id="kep">
 
     <br>
 
