--- a/hobbik.html
+++ b/hobbik.html
@@ -24,7 +24,7 @@
     <br>
 
     <div>
-        <ol>
+        <ul>
             <li>
                 <h2>Animálás</h2> 
                 <p>Nagyon fiatalon kezdtem el tanulni, viszont ez nem nagyon látszik meg egy munkámon sem.</p>
@@ -35,8 +35,17 @@
                 <h2>3D modellezés</h2>
                 <img src="model.png" alt="3D modell" class="kep">
             </li>
+            <li>
+                <h2>
+                    Edzés
+                </h2>
+                <p>
+                    Kb egy éve kezdtem el edzőterembe járni edzőterembe, volt mikor barátokkal, volt mikor egyedül. Jelenleg kedves Kardos Kevin barátunkat hurcolom magammal, amikor csak tudom.
+                </p>
 
-        </ol>
+                <img src="kkevin.jpg" alt="kkevin kivételesen a gymben" class="kep">
+            </li>
+        </ul>
     </div>
 </body>
 </html>
