--- a/rolam.html
+++ b/rolam.html
@@ -37,7 +37,7 @@
         <p>
             <ul>
                 <li>képes vagyok pár másodperc alatt megölni egy beszélgetést</li>
-                <li>Nagyon jól tudok még olyan emberek közt is szorongni, akiket évek óta ismerek</li>
+                <li>Nagyon jól tudok még olyan emberek közt is szorongani, akiket évek óta ismerek</li>
                 <li>Addig nem fejezek be semmit, amíg nem leszek vele teljesen megelégedve</li>
                 <li>200 kg lábtolón azt hiszem már egy elég nagy szám</li>
             </ul>
