--- a/rolam.html
+++ b/rolam.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="rolam.css">
 </head>
 <body>
-    <img src="arrow.png" alt="vissza" id="vissza" onclick="window.location.href='alap.html';">
+    <img src="arrow.png" alt="vissza" id="vissza" onclick="window.location.href='kezdooldal.html';">
 
     <div>
         <h1>
