--- a/otthonom.html
+++ b/otthonom.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <img src="arrow.png" alt="vissza" id="vissza" onclick="window.location.href='alap.html';">
+    <img src="arrow.png" alt="vissza" id="vissza" onclick="window.location.href='kezdooldal.html';">
 
     <div>
     <h1>Szolnok-Szandaszőlős</h1>
